[gd_scene load_steps=12 format=2]

[ext_resource path="res://loginForm.gd" type="Script" id=1]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://DroidSans.ttf"

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://DroidSans.ttf"

[sub_resource type="DynamicFont" id=4]
size = 48
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://DroidSans.ttf"

[sub_resource type="DynamicFont" id=6]
size = 40
font_data = SubResource( 5 )

[sub_resource type="DynamicFontData" id=7]
font_path = "res://DroidSans.ttf"

[sub_resource type="DynamicFont" id=8]
size = 40
font_data = SubResource( 7 )

[sub_resource type="DynamicFontData" id=9]
font_path = "res://DroidSans.ttf"

[sub_resource type="DynamicFont" id=10]
size = 40
font_data = SubResource( 9 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_left = -120.0
margin_top = -56.0
margin_right = 1978.0
margin_bottom = 1150.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Panel"]
anchor_left = 0.297
anchor_top = 0.261
anchor_right = 0.297
anchor_bottom = 0.261
margin_left = 184.0
margin_top = 120.0
margin_right = 449.0
margin_bottom = 190.0
custom_fonts/normal_font = SubResource( 2 )
text = "Username:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel4" type="RichTextLabel" parent="Panel"]
anchor_left = 0.297
anchor_top = 0.261
anchor_right = 0.297
anchor_bottom = 0.261
margin_left = 184.0
margin_top = 248.0
margin_right = 415.0
margin_bottom = 318.0
rect_pivot_offset = Vector2( 72, 290 )
custom_fonts/normal_font = SubResource( 4 )
text = "Password:"

[node name="LineEdit" type="LineEdit" parent="Panel"]
anchor_left = 0.297
anchor_top = 0.261
anchor_right = 0.297
anchor_bottom = 0.261
margin_left = 440.0
margin_top = 125.0
margin_right = 696.0
margin_bottom = 189.0
custom_fonts/font = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit2" type="LineEdit" parent="Panel"]
anchor_left = 0.297
anchor_top = 0.261
anchor_right = 0.297
anchor_bottom = 0.261
margin_left = 440.0
margin_top = 248.0
margin_right = 696.0
margin_bottom = 312.0
custom_fonts/font = SubResource( 8 )
secret = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Panel"]
anchor_left = 0.297
anchor_top = 0.261
anchor_right = 0.297
anchor_bottom = 0.261
margin_left = 504.0
margin_top = 376.0
margin_right = 696.0
margin_bottom = 440.0
custom_fonts/font = SubResource( 10 )
text = "Login"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox" type="CheckBox" parent="Panel"]
anchor_left = 0.297
anchor_top = 0.261
anchor_right = 0.297
anchor_bottom = 0.261
margin_left = 188.0
margin_top = 374.0
margin_right = 286.0
margin_bottom = 398.0
text = " Fullscreen"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="text_entered" from="Panel/LineEdit2" to="." method="_on_LineEdit2_text_entered"]
[connection signal="pressed" from="Panel/Button" to="." method="_on_Button_pressed"]
[connection signal="toggled" from="Panel/CheckBox" to="." method="_on_CheckBox_toggled"]
